<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.example.handballcourtmanager.viewmodel.MatchesViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:background="@color/blue_3"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_singles"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/singles"
            app:layout_constraintBottom_toBottomOf="@+id/tv_doubles"
            app:layout_constraintEnd_toStartOf="@id/tv_doubles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_doubles"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/doubles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_triangles"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/triangle"
            app:layout_constraintBottom_toBottomOf="@+id/tv_doubles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_doubles"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_singles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tv_singles"
            app:layout_constraintStart_toStartOf="@id/tv_singles"
            app:layout_constraintTop_toBottomOf="@id/tv_singles"

            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_doubles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tv_doubles"
            app:layout_constraintStart_toStartOf="@id/tv_doubles"
            app:layout_constraintTop_toBottomOf="@+id/tv_doubles" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_triangles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="@id/tv_triangles"
            app:layout_constraintStart_toStartOf="@id/tv_triangles"
            app:layout_constraintTop_toBottomOf="@id/tv_triangles" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_doubles" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>