<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.roster.RosterFragment"
    >
    <data>
        <variable
            name="viewModel"
            type="com.yonasoft.handballcourtmanager.fragments.roster.viewmodel.RosterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/queues"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_3"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_winners"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/winners"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/winners_rcv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_input_add_player"
            app:layout_constraintEnd_toEndOf="@id/tv_winners"
            app:layout_constraintStart_toStartOf="@id/tv_winners"
            app:layout_constraintTop_toBottomOf="@id/tv_winners" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/text_input_add_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_queue"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/regular"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/queue_rcv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_input_add_player"
            app:layout_constraintEnd_toEndOf="@id/tv_queue"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/tv_queue"
            app:layout_constraintTop_toBottomOf="@id/tv_queue" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_add_player"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/name"

            app:layout_constraintBottom_toTopOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_add_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:text="@={viewModel.nameToAdd}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>